# string_wizard

./: .gitattributes  Cargo.toml  LICENSE  README.md  renovate.json
benches/: joiner_join.rs
examples/: source_map.rs
src/: basic_types.rs  chunk.rs  decoded_map.rs  joiner.rs  lib.rs  locator.rs  magic_string.rs  mappings.rs  source_map.rs  sourcemap_builder.rs  span.rs  type_aliases.rs
src/magic_string/: append.rs  indent.rs  mod.rs  movement.rs  mutation.rs  prepend.rs  source_map.rs  token.rs  update.rs
src/source_map/: decoded_map.rs  locator.rs  mod.rs  sourcemap_builder.rs
tests/: joiner.rs  joiner_source_map.rs  magic_string.rs  magic_string_source_map.rs  usage.rs
