[package]
name = "string_wizard"
version = "0.0.21"
edition = "2021"
license = "MIT"
description = "manipulate string like wizards"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index_vec = { version = "0.1.3" }
rustc-hash = { version = "1.1.0" }
once_cell = "1.18.0"
oxc_sourcemap = { version = "~0.15.0" }

[features]
# Enable source map functionality
source_map = []

[dev-dependencies]
glob = "0.3.1"
criterion = { version = "0.4" }
insta = "1.31.0"

[[bench]]
name = "joiner_join"
harness = false

[profile.release]
debug = true